// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<Message /> > should be a error message 1`] = `
<div>
  <div
    class="d_flex"
  >
    <div
      class="bgm-message__content bdr_19px p_9px_16px bx-s_border-box d_flex ai_center fw_600 fs_14px lh_20px [&_>_svg]:flex_none [&_>_svg]:w_20px [&_>_svg]:h_20px [&_>_svg]:mr_8px [&.bgm-message__content--block]:flex_1 [&.bgm-message__content--info]:bg-c_rgba(90,_87,_87,_0.6) [&.bgm-message__content--info]:c_#fff [&.bgm-message__content--error]:bg-c_#f97f77 [&.bgm-message__content--error]:c_#fff bgm-message__content--error"
    >
      <div />
      <span>
        example-message-error
      </span>
    </div>
  </div>
</div>
`;

exports[`<Message /> > should be a whole line 1`] = `
<div>
  <div
    class="d_flex"
  >
    <div
      class="bgm-message__content bdr_19px p_9px_16px bx-s_border-box d_flex ai_center fw_600 fs_14px lh_20px [&_>_svg]:flex_none [&_>_svg]:w_20px [&_>_svg]:h_20px [&_>_svg]:mr_8px [&.bgm-message__content--block]:flex_1 [&.bgm-message__content--info]:bg-c_rgba(90,_87,_87,_0.6) [&.bgm-message__content--info]:c_#fff [&.bgm-message__content--error]:bg-c_#f97f77 [&.bgm-message__content--error]:c_#fff bgm-message__content--info bgm-message__content--block"
    >
      <div />
      <span>
        example-message-block
      </span>
    </div>
  </div>
</div>
`;

exports[`<Message /> > should be render a Message 1`] = `
<div>
  <div
    class="d_flex"
  >
    <div
      class="bgm-message__content bdr_19px p_9px_16px bx-s_border-box d_flex ai_center fw_600 fs_14px lh_20px [&_>_svg]:flex_none [&_>_svg]:w_20px [&_>_svg]:h_20px [&_>_svg]:mr_8px [&.bgm-message__content--block]:flex_1 [&.bgm-message__content--info]:bg-c_rgba(90,_87,_87,_0.6) [&.bgm-message__content--info]:c_#fff [&.bgm-message__content--error]:bg-c_#f97f77 [&.bgm-message__content--error]:c_#fff bgm-message__content--info"
    >
      <div />
      <span>
        example-message
      </span>
    </div>
  </div>
</div>
`;
